fix button appearance on iphone

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,6 +69,9 @@ input, .sponsor-btn {
 	padding: .2em .5em;
 	box-sizing: border-box;
 	text-decoration: none;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 }
 
 input:focus {
